made changes to placeholder texts in index.html and added a new background image in css

--- a/index.html
+++ b/index.html
@@ -10,46 +10,49 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
+          <li class="name">Jeffrey Eskes</li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <h1 class="tag name">Hello, I’m Jeffrey.</h1>
+      <p class="tag location">My home is Lelystad, a small city in The Netherlands.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
+        <p>I’m an aspiring web developer who just recently got into web-development. With the ever expanding web I see an opportunity in becoming a well rounded web-developer.</p>
+        <p>Currently I am working as a warehouse employee. I am used to working hard with my body, now I'm looking forward to work hard with my head.</p>
+      </div>
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>In the long run my goal is to become a well rounded web-developer. For now I am focusing on developing my front-end-developer skills and knowledge in:  </p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <!-- <li>Ruby</li>
+          <li>Rails</li> -->
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+        <p>After having decent knowledge of front-end-development I will expand upon my knowledge and skills of back-end languages like: </p>
+        <ul class="skills">
+          <li>Ruby</li>
+          <li>Python</li>
+          <li>PHP</li>
+        </ul>
+      </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/EskesJ" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2019, Jeffrey Eskes</p>
     </footer>
   </body>
   </html>
