--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/EskesJ.png" alt="Picture of Jeffrey Eskes" class="profile-image">
       <h1 class="tag name">Hello, I’m Jeffrey.</h1>
       <p class="tag location">My home is Lelystad, a small city in The Netherlands.</p>
     </header>
