--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <ul class="nav">
           <li class="name">Jeffrey Eskes</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="about-me.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
-    <header>
+    <header class="header-home">
       <img src="images/EskesJ.png" alt="Picture of Jeffrey Eskes" class="profile-image">
       <h1 class="tag name">Hello, I’m Jeffrey.</h1>
       <p class="tag location">My home is Lelystad, a small city in The Netherlands.</p>
@@ -36,8 +37,6 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <!-- <li>Ruby</li>
-          <li>Rails</li> -->
         </ul>
         <p>After having decent knowledge of front-end-development I will expand upon my knowledge and skills of back-end languages like: </p>
         <ul class="skills">
