--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>About Me</title>
+  <title>Contact me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -17,33 +17,17 @@
         </ul>
     </div>
 
-    <header class="aboutme">
+    <header class="header-home">
+      <div class="tag name">
+        <h1>Contact</h1>
+        <address>
+            <a href="mailto:jeffrey.eskes@gmail.com">jeffrey.eskes@gmail.com</a><br/>
+            <a href="tel:+311-555-2368">+311-555-2368</a><br/>
+        </address>
+          <p>Don't forget to visit my github page!!</p>
+      </div>
+
     </header>
-
-    <main class="flex">
-      <div class="card">
-        <h2>About Me</h2>
-        <p>Hello and thank you for visiting my page!</p>
-        <p>My name is Jeffrey Eskes and I am 31 years old. I live in the middle of The Netherlands in a small city called Lelystad with my 7 year old son</p>
-        <p>I have persued some interests in the past in the fields of Bio-Informatics and everything Japanese related but those interests did not get me as exited as I am for learning to become a web developer. </p>
-        <p>At this moment I am working full time as a warehehouse employee in a large company in Lelystad</p>
-        <p>I have enrolled in the <a class="about-me-links" target="_blank" href="https://join.teamtreehouse.com/front-end-web-development-techdegree/">FEWD techdgree</a> on <a class="about-me-links" target="_blank" href="https://teamtreehouse.com/home">team treehouse</a> to get started on a portfolio in FEWD. I hope this experience will contribute on getting started in the web-development industry</p>
-      </div>
-
-      <div class="card">
-        <h2>Hobbies</h2>
-        <p>Things I like to do in my free time:</p>
-        <ul class="skills">
-          <li><p>Watching Anime</p></li>
-          <li><p>Fitness</p></li>
-          <li><p>Going to the Cinema</p></li>
-          <li><p>Polishing my coding skills :)</p></li>
-          <li><p>Spending time with my son</p></li>
-          <li><p>Gaming</p></li>
-        </ul>
-
-      </div>
-
     </main>
     <footer>
       <ul>
